--- a/flusher/requirements.txt
+++ b/flusher/requirements.txt
@@ -2,7 +2,7 @@ appdirs==1.4.4
 attrs==19.3.0
 black==19.10b0
 click==7.1.2
-kafka-python==2.0.1
+confluent-kafka==2.2.0
 loguru==0.5.1
 pathspec==0.8.0
 psycopg2-binary==2.9.5
@@ -10,3 +10,4 @@ regex==2020.6.8
 SQLAlchemy==1.3.17
 toml==0.10.1
 typed-ast==1.5.4
+google-cloud-storage==2.10.0
